# grayskull

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  azure-pipelines.yml  environment.yaml  index.md  numpy_pyproject.toml  pyproject.toml  pytest.ini  pytorch_pyproject.toml  quir  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/template-files/: config.yml
.github/workflows/: codeql.yml  flake8.yml  pre-commit.yml  publish_pypi.yml  pythonapp.yml  sphinx.yml  tests.yml
docs/: requirements.txt
docs/source/: cli.md  conf.py  developer_guide.md  developer_guide.rst  index.md  index.rst  user_guide.md  user_guide.rst
ensureconda/: meta.yaml
grayskull/: __init__.py  __main__.py  config.py  main.py  meta.yaml  sdist.py  utils.py
grayskull/base/: __init__.py  base_recipe.py  delimiters.py  extra.py  factory.py  github.py  old_section.py  pkg_info.py  recipe_item.py  section.py  sections.py  selectors.py  source.py  track_packages.py  utils.py
grayskull/cli/: __init__.py  parser.py  stdout.py
grayskull/license/: discovery.py  licence_cache.json
grayskull/license/data/: AGPL-3.0  APACHE-2.0  BSD-2-Clause  BSD-3-Clause  BSD-4-Clause  CC0-1.0  EPL-2.0  GPL-2.0-only  GPL-3.0-only  LGPL-2.1-only  MIT  MPL-2.0  Unlicense  __init__.py
grayskull/pypi/: __init__.py  config.yaml  pypi.py  whl.py
grayskull/strategy/: abstract_strategy.py  config.yaml  cran.py  parse_poetry_version.py  py_base.py  py_build.py  py_toml.py  pypi.py  temp
policy_sentry/: meta.yaml
slack-sdk/: meta.yaml
slack_sdk/: meta.yaml
src/: setup.py
src/grayskull/: base_recipe.py
src/grayskull/base/: __init__.py  base_recipe.py
src/grayskull/pypi/: pypi.py
temp/grayskull/: meta.yaml
tests/: conftest.py  test_base_recipe.py  test_cran.py  test_delimiters.py  test_extra.py  test_factory.py  test_flit.py  test_github_r_integration.py  test_github_r_packages.py  test_github_recipes.py  test_integration.py  test_package.py  test_parse_poetry_version.py  test_poetry.py  test_py_base.py  test_py_toml.py  test_pypi.py  test_pyproject.py  test_recipe_item.py  test_sdist.py  test_sections.py  test_selectors.py  test_source.py  test_tox.py  test_utils.py
tests/base/: test_base_recipe.py  test_extra.py  test_github.py  test_pkg_info.py  test_recipe_item.py  test_sections.py  test_track_packages.py
tests/cli/: test_cli_cmds.py  test_cli_recipes.py  test_parser.py  test_stdout.py
tests/data/: foo_imports.py
tests/data/local-sdist/: PKG-INFO-TEST
tests/data/pkgs/: windrose-1.8.1.tar
tests/data/poetry/: langchain-expected.yaml  poetry.toml
tests/data/pyproject/: poetry.toml
tests/data/recipes/: empty_gray.yaml  simple_jinja_var.yaml
tests/data/tox/: tox.toml
tests/data/track_package/: example.yaml
tests/license/: test_discovery.py
typing_utils/: meta.yaml
tzdata/: meta.yaml
