[build-system]
requires = ["setuptools >=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "grayskull"
authors = [
    { name = "Marcelo Duarte Trevisani", email = "marceloduartetrevisani@gmail.com" },
]
description = "Project to generate recipes for conda packages"
readme = "README.md"
keywords = ["conda"]
license = { text = "Apache-2.0" }
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "colorama",
    "conda-souschef >=2.2.3",
    "packaging >=21.3",
    "pip",
    "pkginfo",
    "progressbar2 >=3.53.0",
    "rapidfuzz >=3.0.0",
    "requests",
    "ruamel.yaml >=0.16.10",
    "ruamel.yaml.jinja2",
    "setuptools >=30.3.0",
    "stdlib-list",
    "tomli; python_version < '3.11'",
    "tomli-w",
]

[project.optional-dependencies]
testing = [
    "mock",
    "pytest",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-mock",
    "setuptools-scm",
    "numpy",
]

docs = [
    "furo",
    "sphinx",
    "sphinx-argparse",
    "myst-parser",
    "mdit-py-plugins>=0.3.0",
]

[project.scripts]
grayskull = "grayskull.main:main"
greyskull = "grayskull.main:main"
conda-grayskull = "grayskull.main:main"
conda-greyskull = "grayskull.main:main"

[project.urls]
Source = "https://github.com/conda/grayskull"

[tool.setuptools.packages.find]
include = ["grayskull", "grayskull.*"]

[tool.setuptools_scm]
write_to = "grayskull/_version.py"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"tests/data/**" = ["E", "F"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
grayskull = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
testing = { features = ["testing"], solve-group = "default" }
